[#107] feat : 브랜드 검색 페이지네이션 변경 - /app/brand/search 변경